# wcppcli

./: .gitignore  CMakeLists.txt  README.md  config.ini
examples/: completion_example.cpp  config_formats_example.cpp  ensure_file_example.cpp  full_example.cpp  interactive_example.cpp  log_example.cpp  nested_config_example.cpp  priority_merge_example.cpp  schema_validation_example.cpp
include/wcppcli/: wcli.hpp  wconf.hpp  wlog.hpp  wstyle.hpp  wui.hpp
src/: wcli.cpp  wcli_main.cpp  wconf.cpp  wlog.cpp  wstyle.cpp  wui.cpp
